rhs div and href test

--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,15 @@
 <body class="bg-gray-800 text-white flex flex-row justify-between"> 
     
     <ol class="mt-4 p-6 list-disc"></ol>
-    <form class="mr-4">
-        <input type="text" placeholder="New Task" class="bg-transparent rounded h-12 mt-4 pl-3" autofocus>
-        <button type="submit" class="bg-blue-800 rounded h-12 w-16">ADD</button>
-    </form>
-
+    <div class="rhsw">
+        <form class="mr-4">
+            <input type="text" placeholder="New Task" class="bg-transparent rounded h-12 mt-4 pl-3" autofocus>
+            <button type="submit" class="bg-blue-800 rounded h-12 w-16">ADD</button>
+        </form><br><br>
+        <div class="rwindow">
+            <p>new rhs window with task details</p>
+        </div>
+    </div>
     <script src="./script.js"></script>
 </body>
 
