--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="./css/style.css" rel="stylesheet">
     <link href="./css/tailwind.min.css" rel="stylesheet">
     <title>🗓 TasKit</title>
 </head>
