--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,8 @@
         </form><br><br>
         <div class="rwindo">
             <form class="rwindow">
-                <input type="text" placeholder="old head" class="bg-transparent rounded h-10 w-22 mt-3 pl-2"><br>
-                <input type="text" placeholder="old det" class="bg-transparent rounded h-20 w-22 mt-3 pl-2"><br><br>
+                <input type="text" placeholder="old head" class="bg-transparent rounded h-10 w-22 mt-3 pl-2" id="rwinput1"><br>
+                <input type="text" placeholder="old det" class="bg-transparent rounded h-20 w-22 mt-3 pl-2" id="rwinput2"><br><br>
                 <button type="submit" class="bg-blue-800 rounded h-10 w-24 mr-4"> UPDATE </button>
                 <button type="submit" class="bg-blue-800 rounded h-10 w-24 mr-4"> DELETE </button>
             </form>
