--- a/src/index.html
+++ b/src/index.html
@@ -31,11 +31,12 @@
             <button type="submit" class="bg-blue-800 rounded h-12 w-16">ADD</button>
         </form><br><br>
         <div class="rwindo">
-            <form class="rwindow">
+            <form class="rwindow" id="form2">
                 <input type="text" value="text" class="bg-transparent rounded h-10 w-22 mt-3 pl-2" id="rwinput1"><br>
                 <input type="text" value="sub text" class="bg-transparent rounded h-20 w-22 mt-3 pl-2" id="rwinput2"><br><br>
-                <button type="submit" class="bg-blue-800 rounded h-10 w-24 mr-4"> UPDATE </button>
-                <button type="submit" class="bg-blue-800 rounded h-10 w-24 mr-4"> DELETE </button>
+                <input type="hidden" class="hidclass" id="rwinput3" name="custId" value="idnum">
+                <button type="submit" class="bg-blue-800 rounded h-10 w-24 mr-4" id="edit"> UPDATE </button>
+                <button type="reset" class="bg-blue-700 rounded h-10 w-24 mr-4" id="delet"> DELETE </button>
             </form>
         </div>
     </div>
