--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
     App: A Todo-Task App with Electronjs
     Author: Jinso Raj
     Date: 14 May 2021
-    Todo: 1. fix autofocus-DONE, ol/ul bullets view- DO list-style: disk.
-          2. href for each li -> each rside window.
+    Todo: 1. fix autofocus-DONE, ol/ul bullets view- DO list-style: disk. -done
+          2. href for each li -> each rside window. - done
           3. Warning/Pop-up for clear DB.
-          4. Better UI for each li.
+          4. Better UI for each li. -hmm
           5. if 2? then - ...
 -->
 
@@ -35,8 +35,8 @@
                 <input type="text" value="text" class="bg-transparent rounded h-10 w-22 mt-3 pl-2" id="rwinput1"><br>
                 <input type="text" value="sub text" class="bg-transparent rounded h-20 w-22 mt-3 pl-2" id="rwinput2"><br><br>
                 <input type="hidden" class="hidclass" id="rwinput3" name="custId" value="idnum">
-                <button type="submit" class="bg-blue-800 rounded h-10 w-24 mr-4" id="edit"> UPDATE </button>
-                <button type="reset" class="bg-blue-700 rounded h-10 w-24 mr-4" id="delet"> DELETE </button>
+                <button type="submit" class="bg-green-800 rounded h-10 w-24 mr-4" id="edit"> UPDATE </button>
+                <button type="reset" class="bg-red-700 rounded h-10 w-24 mr-4" id="delet"> DELETE </button>
             </form>
         </div>
     </div>
