--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
         </form><br><br>
         <div class="rwindo">
             <form class="rwindow" id="form2">
+                <button id = "x" onclick="myFunction()">X</button>
                 <input type="text" value="text" class="bg-transparent rounded h-10 w-22 mt-3 pl-2" id="rwinput1"><br>
                 <input type="text" value="sub text" class="bg-transparent rounded h-20 w-22 mt-3 pl-2" id="rwinput2"><br><br>
                 <input type="hidden" class="hidclass" id="rwinput3" name="custId" value="idnum">
