--- a/src/index.html
+++ b/src/index.html
@@ -26,15 +26,15 @@
     <ol class="mt-4 p-6 list-disc" id="olid"></ol>
     <div class="rhsw">
         <form class="mr-4" id="form1">
-            <input type="text" placeholder="New Task" class="bg-transparent rounded h-12 mt-4 pl-3" id="input1" autofocus><br>
-            <input type="text" placeholder="details" class="bg-transparent rounded h-20 mt-4 pl-3" id="input2">
+            <input type="text" placeholder="New Task" class="bg-purple-900 rounded h-12 mt-4 pl-3" id="input1" autofocus><br>
+            <input type="text" placeholder="details" class="bg-purple-900 rounded h-12 mt-4 pl-3" id="input2">
             <button type="submit" class="bg-blue-800 rounded h-12 w-16">ADD</button>
         </form><br><br>
         <div class="rwindo">
             <form class="rwindow" id="form2">
-                <button id = "x" onclick="myFunction()">X</button>
+                <button id = "x" onclick="closeX()">X</button>
                 <input type="text" value="text" class="bg-transparent rounded h-10 w-22 mt-3 pl-2" id="rwinput1"><br>
-                <input type="text" value="sub text" class="bg-transparent rounded h-20 w-22 mt-3 pl-2" id="rwinput2"><br><br>
+                <input type="text" value="sub text" class="bg-transparent rounded h-10 w-22 mt-3 pl-2" id="rwinput2"><br><br>
                 <input type="hidden" class="hidclass" id="rwinput3" name="custId" value="idnum">
                 <button type="submit" class="bg-green-800 rounded h-10 w-24 mr-4" id="edit"> UPDATE </button>
                 <button type="reset" class="bg-red-700 rounded h-10 w-24 mr-4" id="delet"> DELETE </button>
